overflow issue

--- a/styles-640.css
+++ b/styles-640.css
@@ -217,7 +217,7 @@
     .third-sec-container {
         padding: 0 12px;
         width: 100%;
-        box-sizing:content-box;
+        box-sizing:border-box;
     }
     .third-sec-content {
         padding: 0 12px;
@@ -265,7 +265,7 @@
     }
     .third-img1 {
         padding-right: 18px;
-        margin-right: 18px;
+        margin-bottom: 18px;
         flex-basis: 25%;
         max-width: 25%;
     }
@@ -302,17 +302,17 @@
 
 
     .third-img4 {
-        margin-right: 18px;
+        padding-right: 18px;
         flex-basis: 18.75%;
         max-width: 18.75%;
     }
     .third-img5 {
-        margin-right: 18px;
+        padding-right: 18px;
         flex-basis: 18.75%;
         max-width: 18.75%;
     }
     .third-img6 {
-        margin-right: 18px;
+        padding-right: 18px;
         flex-basis: 25%;
         max-width: 25%;
     }
